[package]
name = "voirs-dataset"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/voirs-dataset"
keywords = ["voirs", "dataset", "ljspeech", "jvs", "audio-data"]
categories = ["science", "data-structures", "multimedia::audio"]
rust-version.workspace = true
description = "Dataset utilities for VoiRS (LJSpeech, JVS, etc.)"

[lib]
name = "voirs_dataset"
crate-type = ["lib"]

[dependencies]
# SciRS2 - Scientific computing abstractions
scirs2-core.workspace = true
scirs2-fft.workspace = true

# FFT (for mel spectrogram computation)
rustfft.workspace = true

# HTTP and file handling
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true

# Audio processing
hound.workspace = true
dasp.workspace = true
claxon.workspace = true
flac-bound.workspace = true
lewton.workspace = true
minimp3.workspace = true
mp3lame-encoder.workspace = true

# Compression and archives
flate2.workspace = true
tar.workspace = true
zip.workspace = true
bzip2.workspace = true

# Serialization and data formats
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
toml.workspace = true
bincode.workspace = true
ordered-float.workspace = true
parquet.workspace = true
arrow.workspace = true

# Async traits
async-trait.workspace = true

# Date and time handling
chrono.workspace = true

# UUID generation
uuid.workspace = true

# Hashing
md5.workspace = true

# Futures and async utilities
futures.workspace = true

# File system and paths
walkdir.workspace = true
tempfile.workspace = true
memmap2.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# System information
num_cpus.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
futures.workspace = true

[[bench]]
name = "processing"
harness = false

[[bench]]
name = "quality"
harness = false

[[bench]]
name = "scalability"
harness = false

[features]
default = []
[lints]
workspace = true
