[package]
name = "voirs-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "C/Python FFI bindings for VoiRS speech synthesis"

[lib]
name = "voirs_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core VoiRS crates
voirs-sdk = { path = "../voirs-sdk" }
voirs-g2p = { path = "../voirs-g2p" }
voirs-acoustic = { path = "../voirs-acoustic" }
voirs-vocoder = { path = "../voirs-vocoder" }

# FFI utilities
libc.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Memory management
once_cell.workspace = true

# Logging (optional for debugging)
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Python bindings
pyo3 = { workspace = true, optional = true, features = ["extension-module"] }
numpy = { workspace = true, optional = true }

# Node.js bindings
napi = { version = "2.0", optional = true, features = ["async"] }
napi-derive = { version = "2.0", optional = true }

# Threading
parking_lot.workspace = true
num_cpus.workspace = true

# Audio file I/O
hound = "3.5"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
logging = ["dep:tracing", "dep:tracing-subscriber"]
python = ["dep:pyo3", "dep:numpy"]
nodejs = ["dep:napi", "dep:napi-derive"]
gpu = ["voirs-acoustic/gpu", "voirs-vocoder/gpu"]